v2/Assembler/Spect.Net.CommandParser/Generated/CommandToolParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\dotne\source\repos\spectnetide\Assembler\AntlrCommandParserGenerator\AntlrCommandParserGenerator\CommandTool.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Spect.Net.CommandParser.Generated {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class CommandToolParser : Parser {
	public const int
		WS=1, LESS=2, LESSEQ=3, GREAT=4, GREATEQ=5, EQ=6, MULT=7, HASH=8, ADD=9, 
		DASH=10, COLON=11, B=12, C=13, D=14, EB=15, EW=16, G=17, GS=18, G1=19, 
		G2=20, G3=21, G4=22, H=23, J=24, L=25, LW=26, M=27, P=28, R=29, RD=30, 
		S=31, SB=32, T=33, TB=34, RB=35, UB=36, XW=37, X=38, W=39, RETRIEVE=40, 
		SECTION=41, LITERAL=42, LITCH=43, OTHER=44;
	public const int
		RULE_compileUnit = 0, RULE_toolCommand = 1, RULE_gotoCommand = 2, RULE_romPageCommand = 3, 
		RULE_bankPageCommand = 4, RULE_memModeCommand = 5, RULE_labelCommand = 6, 
		RULE_commentCommand = 7, RULE_prefixCommentCommand = 8, RULE_setBreakpointCommand = 9, 
		RULE_toggleBreakpointCommand = 10, RULE_removeBreakpointCommand = 11, 
		RULE_updateBreakpointCommand = 12, RULE_eraseAllBreakpointsCommand = 13, 
		RULE_retrieveCommand = 14, RULE_literalCommand = 15, RULE_disassemblyTypeCommand = 16, 
		RULE_reDisassemblyCommand = 17, RULE_jumpCommand = 18, RULE_sectionCommand = 19, 
		RULE_addWatchCommand = 20, RULE_removeWatchCommand = 21, RULE_updateWatchCommand = 22, 
		RULE_labelWidthCommand = 23, RULE_exchangeWatchCommand = 24, RULE_eraseAllWatchCommand = 25, 
		RULE_compactCommand = 26, RULE_exportCommand = 27;
	public static readonly string[] ruleNames = {
		"compileUnit", "toolCommand", "gotoCommand", "romPageCommand", "bankPageCommand", 
		"memModeCommand", "labelCommand", "commentCommand", "prefixCommentCommand", 
		"setBreakpointCommand", "toggleBreakpointCommand", "removeBreakpointCommand", 
		"updateBreakpointCommand", "eraseAllBreakpointsCommand", "retrieveCommand", 
		"literalCommand", "disassemblyTypeCommand", "reDisassemblyCommand", "jumpCommand", 
		"sectionCommand", "addWatchCommand", "removeWatchCommand", "updateWatchCommand", 
		"labelWidthCommand", "exchangeWatchCommand", "eraseAllWatchCommand", "compactCommand", 
		"exportCommand"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'<'", "'<='", "'>'", "'>='", "'='", "'*'", "'#'", "'+'", 
		"'-'", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "LESS", "LESSEQ", "GREAT", "GREATEQ", "EQ", "MULT", "HASH", 
		"ADD", "DASH", "COLON", "B", "C", "D", "EB", "EW", "G", "GS", "G1", "G2", 
		"G3", "G4", "H", "J", "L", "LW", "M", "P", "R", "RD", "S", "SB", "T", 
		"TB", "RB", "UB", "XW", "X", "W", "RETRIEVE", "SECTION", "LITERAL", "LITCH", 
		"OTHER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CommandTool.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CommandToolParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ToolCommandContext toolCommand() {
			return GetRuleContext<ToolCommandContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(CommandToolParser.Eof, 0); }
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandToolVisitor<TResult> typedVisitor = visitor as ICommandToolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; toolCommand();
			State = 57; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ToolCommandContext : ParserRuleContext {
		public GotoCommandContext gotoCommand() {
			return GetRuleContext<GotoCommandContext>(0);
		}
		public RomPageCommandContext romPageCommand() {
			return GetRuleContext<RomPageCommandContext>(0);
		}
		public BankPageCommandContext bankPageCommand() {
			return GetRuleContext<BankPageCommandContext>(0);
		}
		public MemModeCommandContext memModeCommand() {
			return GetRuleContext<MemModeCommandContext>(0);
		}
		public LabelCommandContext labelCommand() {
			return GetRuleContext<LabelCommandContext>(0);
		}
		public CommentCommandContext commentCommand() {
			return GetRuleContext<CommentCommandContext>(0);
		}
		public PrefixCommentCommandContext prefixCommentCommand() {
			return GetRuleContext<PrefixCommentCommandContext>(0);
		}
		public SetBreakpointCommandContext setBreakpointCommand() {
			return GetRuleContext<SetBreakpointCommandContext>(0);
		}
		public ToggleBreakpointCommandContext toggleBreakpointCommand() {
			return GetRuleContext<ToggleBreakpointCommandContext>(0);
		}
		public RemoveBreakpointCommandContext removeBreakpointCommand() {
			return GetRuleContext<RemoveBreakpointCommandContext>(0);
		}
		public UpdateBreakpointCommandContext updateBreakpointCommand() {
			return GetRuleContext<UpdateBreakpointCommandContext>(0);
		}
		public EraseAllBreakpointsCommandContext eraseAllBreakpointsCommand() {
			return GetRuleContext<EraseAllBreakpointsCommandContext>(0);
		}
		public RetrieveCommandContext retrieveCommand() {
			return GetRuleContext<RetrieveCommandContext>(0);
		}
		public LiteralCommandContext literalCommand() {
			return GetRuleContext<LiteralCommandContext>(0);
		}
		public DisassemblyTypeCommandContext disassemblyTypeCommand() {
			return GetRuleContext<DisassemblyTypeCommandContext>(0);
		}
		public ReDisassemblyCommandContext reDisassemblyCommand() {
			return GetRuleContext<ReDisassemblyCommandContext>(0);
		}
		public JumpCommandContext jumpCommand() {
			return GetRuleContext<JumpCommandContext>(0);
		}
		public SectionCommandContext sectionCommand() {
			return GetRuleContext<SectionCommandContext>(0);
		}
		public AddWatchCommandContext addWatchCommand() {
			return GetRuleContext<AddWatchCommandContext>(0);
		}
		public RemoveWatchCommandContext removeWatchCommand() {
			return GetRuleContext<RemoveWatchCommandContext>(0);
		}
		public UpdateWatchCommandContext updateWatchCommand() {
			return GetRuleContext<UpdateWatchCommandContext>(0);
		}
		public LabelWidthCommandContext labelWidthCommand() {
			return GetRuleContext<LabelWidthCommandContext>(0);
		}
		public ExchangeWatchCommandContext exchangeWatchCommand() {
			return GetRuleContext<ExchangeWatchCommandContext>(0);
		}
		public EraseAllWatchCommandContext eraseAllWatchCommand() {
			return GetRuleContext<EraseAllWatchCommandContext>(0);
		}
		public CompactCommandContext compactCommand() {
			return GetRuleContext<CompactCommandContext>(0);
		}
		public ExportCommandContext exportCommand() {
			return GetRuleContext<ExportCommandContext>(0);
		}
		public ToolCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_toolCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.EnterToolCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.ExitToolCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandToolVisitor<TResult> typedVisitor = visitor as ICommandToolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToolCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ToolCommandContext toolCommand() {
		ToolCommandContext _localctx = new ToolCommandContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_toolCommand);
		try {
			State = 85;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case G:
				EnterOuterAlt(_localctx, 1);
				{
				State = 59; gotoCommand();
				}
				break;
			case R:
				EnterOuterAlt(_localctx, 2);
				{
				State = 60; romPageCommand();
				}
				break;
			case B:
				EnterOuterAlt(_localctx, 3);
				{
				State = 61; bankPageCommand();
				}
				break;
			case M:
				EnterOuterAlt(_localctx, 4);
				{
				State = 62; memModeCommand();
				}
				break;
			case L:
				EnterOuterAlt(_localctx, 5);
				{
				State = 63; labelCommand();
				}
				break;
			case C:
				EnterOuterAlt(_localctx, 6);
				{
				State = 64; commentCommand();
				}
				break;
			case P:
				EnterOuterAlt(_localctx, 7);
				{
				State = 65; prefixCommentCommand();
				}
				break;
			case SB:
				EnterOuterAlt(_localctx, 8);
				{
				State = 66; setBreakpointCommand();
				}
				break;
			case TB:
				EnterOuterAlt(_localctx, 9);
				{
				State = 67; toggleBreakpointCommand();
				}
				break;
			case RB:
				EnterOuterAlt(_localctx, 10);
				{
				State = 68; removeBreakpointCommand();
				}
				break;
			case UB:
				EnterOuterAlt(_localctx, 11);
				{
				State = 69; updateBreakpointCommand();
				}
				break;
			case EB:
				EnterOuterAlt(_localctx, 12);
				{
				State = 70; eraseAllBreakpointsCommand();
				}
				break;
			case RETRIEVE:
				EnterOuterAlt(_localctx, 13);
				{
				State = 71; retrieveCommand();
				}
				break;
			case D:
				EnterOuterAlt(_localctx, 14);
				{
				State = 72; literalCommand();
				}
				break;
			case T:
				EnterOuterAlt(_localctx, 15);
				{
				State = 73; disassemblyTypeCommand();
				}
				break;
			case RD:
				EnterOuterAlt(_localctx, 16);
				{
				State = 74; reDisassemblyCommand();
				}
				break;
			case J:
				EnterOuterAlt(_localctx, 17);
				{
				State = 75; jumpCommand();
				}
				break;
			case SECTION:
				EnterOuterAlt(_localctx, 18);
				{
				State = 76; sectionCommand();
				}
				break;
			case ADD:
				EnterOuterAlt(_localctx, 19);
				{
				State = 77; addWatchCommand();
				}
				break;
			case DASH:
				EnterOuterAlt(_localctx, 20);
				{
				State = 78; removeWatchCommand();
				}
				break;
			case MULT:
				EnterOuterAlt(_localctx, 21);
				{
				State = 79; updateWatchCommand();
				}
				break;
			case LW:
				EnterOuterAlt(_localctx, 22);
				{
				State = 80; labelWidthCommand();
				}
				break;
			case XW:
				EnterOuterAlt(_localctx, 23);
				{
				State = 81; exchangeWatchCommand();
				}
				break;
			case EW:
				EnterOuterAlt(_localctx, 24);
				{
				State = 82; eraseAllWatchCommand();
				}
				break;
			case LITERAL:
				EnterOuterAlt(_localctx, 25);
				{
				State = 83; compactCommand();
				}
				break;
			case X:
				EnterOuterAlt(_localctx, 26);
				{
				State = 84; exportCommand();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GotoCommandContext : ParserRuleContext {
		public ITerminalNode G() { return GetToken(CommandToolParser.G, 0); }
		public ITerminalNode LITERAL() { return GetToken(CommandToolParser.LITERAL, 0); }
		public ITerminalNode WS() { return GetToken(CommandToolParser.WS, 0); }
		public GotoCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gotoCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.EnterGotoCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.ExitGotoCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandToolVisitor<TResult> typedVisitor = visitor as ICommandToolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGotoCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GotoCommandContext gotoCommand() {
		GotoCommandContext _localctx = new GotoCommandContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_gotoCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87; Match(G);
			State = 89;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==WS) {
				{
				State = 88; Match(WS);
				}
			}

			State = 91; Match(LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RomPageCommandContext : ParserRuleContext {
		public ITerminalNode R() { return GetToken(CommandToolParser.R, 0); }
		public ITerminalNode LITERAL() { return GetToken(CommandToolParser.LITERAL, 0); }
		public ITerminalNode WS() { return GetToken(CommandToolParser.WS, 0); }
		public RomPageCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_romPageCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.EnterRomPageCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.ExitRomPageCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandToolVisitor<TResult> typedVisitor = visitor as ICommandToolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRomPageCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RomPageCommandContext romPageCommand() {
		RomPageCommandContext _localctx = new RomPageCommandContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_romPageCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93; Match(R);
			State = 95;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==WS) {
				{
				State = 94; Match(WS);
				}
			}

			State = 97; Match(LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BankPageCommandContext : ParserRuleContext {
		public ITerminalNode B() { return GetToken(CommandToolParser.B, 0); }
		public ITerminalNode LITERAL() { return GetToken(CommandToolParser.LITERAL, 0); }
		public ITerminalNode WS() { return GetToken(CommandToolParser.WS, 0); }
		public BankPageCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bankPageCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.EnterBankPageCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.ExitBankPageCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandToolVisitor<TResult> typedVisitor = visitor as ICommandToolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBankPageCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BankPageCommandContext bankPageCommand() {
		BankPageCommandContext _localctx = new BankPageCommandContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_bankPageCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(B);
			State = 101;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==WS) {
				{
				State = 100; Match(WS);
				}
			}

			State = 103; Match(LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MemModeCommandContext : ParserRuleContext {
		public ITerminalNode M() { return GetToken(CommandToolParser.M, 0); }
		public MemModeCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_memModeCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.EnterMemModeCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.ExitMemModeCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandToolVisitor<TResult> typedVisitor = visitor as ICommandToolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMemModeCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MemModeCommandContext memModeCommand() {
		MemModeCommandContext _localctx = new MemModeCommandContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_memModeCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; Match(M);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelCommandContext : ParserRuleContext {
		public ITerminalNode L() { return GetToken(CommandToolParser.L, 0); }
		public ITerminalNode[] LITERAL() { return GetTokens(CommandToolParser.LITERAL); }
		public ITerminalNode LITERAL(int i) {
			return GetToken(CommandToolParser.LITERAL, i);
		}
		public ITerminalNode[] WS() { return GetTokens(CommandToolParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(CommandToolParser.WS, i);
		}
		public LabelCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_labelCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.EnterLabelCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.ExitLabelCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandToolVisitor<TResult> typedVisitor = visitor as ICommandToolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabelCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelCommandContext labelCommand() {
		LabelCommandContext _localctx = new LabelCommandContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_labelCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(L);
			State = 109;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==WS) {
				{
				State = 108; Match(WS);
				}
			}

			State = 111; Match(LITERAL);
			State = 114;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==WS) {
				{
				State = 112; Match(WS);
				State = 113; Match(LITERAL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentCommandContext : ParserRuleContext {
		public ITerminalNode C() { return GetToken(CommandToolParser.C, 0); }
		public ITerminalNode LITERAL() { return GetToken(CommandToolParser.LITERAL, 0); }
		public ITerminalNode[] WS() { return GetTokens(CommandToolParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(CommandToolParser.WS, i);
		}
		public CommentCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commentCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.EnterCommentCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.ExitCommentCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandToolVisitor<TResult> typedVisitor = visitor as ICommandToolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommentCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommentCommandContext commentCommand() {
		CommentCommandContext _localctx = new CommentCommandContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_commentCommand);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; Match(C);
			State = 118;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==WS) {
				{
				State = 117; Match(WS);
				}
			}

			State = 120; Match(LITERAL);
			State = 122;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				State = 121; Match(WS);
				}
				break;
			}
			State = 127;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,8,_ctx);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 124;
					MatchWildcard();
					}
					} 
				}
				State = 129;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrefixCommentCommandContext : ParserRuleContext {
		public ITerminalNode P() { return GetToken(CommandToolParser.P, 0); }
		public ITerminalNode LITERAL() { return GetToken(CommandToolParser.LITERAL, 0); }
		public ITerminalNode[] WS() { return GetTokens(CommandToolParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(CommandToolParser.WS, i);
		}
		public PrefixCommentCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prefixCommentCommand; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.EnterPrefixCommentCommand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICommandToolListener typedListener = listener as ICommandToolListener;
			if (typedListener != null) typedListener.ExitPrefixCommentCommand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICommandToolVisitor<TResult> typedVisitor = visitor as ICommandToolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrefixCommentCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrefixCommentCommandContext prefixCommentCommand() {
		PrefixCommentCommandContext _localctx = new PrefixCommentCommandContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_prefixCommentCommand);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 130; Match(P);
			State = 132;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==WS) {
				{
				State = 131; Match(WS);
				}
			}
